--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -8,8 +8,8 @@
 
 html, body {
 	background-color: var(--color-background);
-	padding: 0;
-	margin: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
@@ -17,10 +17,7 @@ body {
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 main {
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  margin-bottom: 10px;
+  margin: 10px;
   border-radius: 3px;
   padding: 0;
   filter: drop-shadow(0 0 2px rgb(241, 191, 109));
