--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,6 +10,8 @@ html, body {
 	background-color: var(--color-background);
   margin: 0;
   padding: 0;
+  padding-left: 3px;
+  padding-right: 3px;
 }
 
 body {
@@ -17,7 +19,10 @@ body {
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 main {
-  margin: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
   border-radius: 3px;
   padding: 0;
   filter: drop-shadow(0 0 2px rgb(241, 191, 109));
