--- a/src/components/card/ContactMe.astro
+++ b/src/components/card/ContactMe.astro
@@ -5,77 +5,89 @@ import Map from "../icons/map.astro";
 
 <div>
   <div>
-    <div class="divider"/>
+    <div class="divider"></div>
     <h3>Contact me</h3>
-    <div class="divider"/>
+    <div class="divider"></div>
   </div>
   <div class="buttons">
-    <a href="mailto:rodolfo@merloali.com" target="_blank"><Email/>rodolfo@merloali.com</a>
-    <a href="https://maps.app.goo.gl/m6MtQ4DpmXcTt9YF6" target="_blank"><Map/>Santa Cruz, Bolivia</a>
+    <a href="mailto:rodolfo@merloali.com" target="_blank" class="email-btn"><Email />rodolfo@merloali.com</a>
+    <a href="https://maps.app.goo.gl/m6MtQ4DpmXcTt9YF6" target="_blank"><Map />Santa Cruz, Bolivia</a>
   </div>
-  <div><div class="divider"/></div>
+  <div><div class="divider"></div></div>
 </div>
 
 <style scoped>
-div {
-  width: 100%;
-  /* outline: 1px solid var(--primary-color); */
-  margin: 0;
-  > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    padding: 0;
+  .opportunity-note {
+    text-align: center;
+    color: var(--primary-color);
+    font-weight: 500;
+    margin: 1rem 0 0 0;
+  }
+
+  .email-btn {
+    font-weight: 600;
+    border: 1px solid var(--primary-color);
+  }
+
+  div {
     width: 100%;
-    gap: 10px;
-    > h3 {
+    /* outline: 1px solid var(--primary-color); */
+    margin: 0;
+    > div {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       margin: 0;
       padding: 0;
-      font-size: 1.5rem;
-      font-weight: 600;
-      text-align: center;
-      text-wrap: nowrap;
-    }
-    > .divider {
-      top: 50%;
       width: 100%;
-      height: 1px;
-      background-color: var(--primary-color);
-    }
-  }
-}
-
-.buttons {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  gap: 1rem;
-  padding: 1rem;
-  box-sizing: border-box;
-  > a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: .5rem;
-    padding: 1rem;
-    background-color: var(--color-background);
-    color: var(--primary-color);
-    border-radius: .5rem;
-    transition: all .2s ease-in-out;
-    > svg {
-      width: 1.5rem;
-      height: 1.5rem;
-      color: #eee;
-    }
-    &:hover {
-      scale: 1.1;
-      background-color: var(--primary-color);
-      color: var(--color-background);
-      > svg {
-        color: var(--color-background);
+      gap: 10px;
+      > h3 {
+        margin: 0;
+        padding: 0;
+        font-size: 1.5rem;
+        font-weight: 600;
+        text-align: center;
+        text-wrap: nowrap;
+      }
+      > .divider {
+        top: 50%;
+        width: 100%;
+        height: 1px;
+        background-color: var(--primary-color);
       }
     }
   }
-}
+
+  .buttons {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1rem;
+    box-sizing: border-box;
+    > a {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 1rem;
+      background-color: var(--color-background);
+      color: var(--primary-color);
+      border-radius: 0.5rem;
+      transition: all 0.2s ease-in-out;
+      > svg {
+        width: 1.5rem;
+        height: 1.5rem;
+        color: #eee;
+      }
+      &:hover {
+        scale: 1.1;
+        background-color: var(--primary-color);
+        color: var(--color-background);
+        > svg {
+          color: var(--color-background);
+        }
+      }
+    }
+  }
 </style>
