--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,7 +54,7 @@ import Email from "../components/icons/email.astro";
               </div>
             </a>
             <a
-              href="https://microphone_test.merloali.com/"
+              href="https://microphonetest.merloali.com/"
               target="_blank"
               rel="noopener noreferrer"
               class="dropdown-item"
